<resources>
    <string name="app_name">Video Downloader</string>
    <string name="all_video_downloader">All Video Downloader</string>
    <string name="video_downloader">Video \nDownloader</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp_status">Whatsapp Status</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="whatsapp_permission">Whatsapp Permission</string>
    <string name="redirect_to_whatsapp_folder_for_getting_status_photos_and_videos_so_you_can_download_in_your_device">Redirect to Whatsapp folder for getting \n status photos and videos so you can \n download in your device.</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="image">Images</string>
    <string name="videoss">Videos</string>
    <string name="pernecessory">Pernecessory</string>
    <string name="write_neesory">Write Imp.</string>
    <string name="yes">Yes</string>
    <string name="saved">Saved...</string>
    <string name="saved_to">Saved to:</string>
    <string name="no_video_found">No data available !</string>
    <string name="status_video">Status Video</string>
    <string name="status_image">Status Image</string>
    <string name="more_tools">More Tools</string>
    <string name="dp_creatar">DP Creator</string>
    <string name="hashtag">Hashtag</string>
    <string name="insta_story">Ensta Story</string>
    <string name="my_download">My Download</string>
    <string name="share_app">Share App</string>
    <string name="download">Download</string>
    <string name="paste">Paste</string>
    <string name="no_data_found">No Data Found</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_valid_url">Enter Valid Url</string>
    <string name="somethingWentWrong">Something went wrong, Try again!</string>
    <string name="downloadStarted">Download Started</string>
    <string name="downloadCompleted">Download Completed </string>
    <string name="login_instagram">Login Instagram</string>
    <string name="logout_instagram">Logout Instagram</string>
    <string name="logout_of_your_account">Logout of your account?</string>
    <string name="login_of_your_account">Login of your account?</string>
    <string name="logout_of_your_account2">Do you want to logout from your private account?</string>
    <string name="login_of_your_account2">Do you want to login your private account?</string>
    <string name="download_from_private_account">Download from Private Account</string>
    <string name="view_stories">View Stories and Download from \nPrivate Account</string>
    <string name="do_u_want_to_download_media_from_pvt">Don\'t Want to Download Media from Private Account?</string>
    <string name="stories">Stories</string>
    <string name="no_net_conn">No Internet Connection</string>
    <string name="fileDeletedSuccessfully">File Deleted Successfully!</string>
    <string name="fileNotDeleted">File not deleted</string>
    <string name="delete">Delete</string>
    <string name="paste_a_video_url_to_download_the_post">Paste a video url to download the post</string>
    <string name="not_a_valid_link">Not a valid link</string>
    <string name="paste_a_facebook_link">Paste a Facebook link</string>
    <string name="share_txt">Hey view/download this image</string>
    <string name="share_image_via">Share File via...</string>
    <string name="no_app_installed">No application found to open this file.</string>
    <string name="medium">Medium</string>
    <string name="size">Size</string>
    <string name="high">High</string>
    <string name="hashtag_for_instagram">Hashtag For Instagram</string>
    <string name="social">Social</string>
    <string name="family">Family</string>
    <string name="celebration">Celebration</string>
    <string name="holidays">Holiday</string>
    <string name="food">Food</string>
    <string name="art">Art</string>
    <string name="nature">Nature</string>
    <string name="animals">Animals</string>
    <string name="weather">Weather</string>
    <string name="celebrities">Celebrities</string>
    <string name="hashtag_text">Hashtag Text</string>
    <string name="text">text</string>
    <string name="creation">Creation</string>
    <string name="items">items</string>
    <string name="tags">" TAGS"</string>
    <string name="dp_generator">DP Generator</string>
    <string name="web_browser">Web Browser</string>
    <string name="linkedin">Linkedin</string>
    <string name="sharechat">ShareChat</string>
    <string name="dailymotion">DailyMotion</string>
    <string name="pinterest">Pinterest</string>
    <string name="imdb">IMDB</string>
    <string name="bittube">Bittube</string>
    <string name="tumblr">Tumblr</string>
    <string name="twitch">Twitch</string>
    <string name="bitchute">BitChute</string>
    <string name="metcalfe">Metcalfe</string>
    <string name="fansubs">Fansubs</string>
    <string name="flickr">Flickr</string>
    <string name="ifunny">Ifunny</string>
    <string name="reddit">Reddit</string>
    <string name="rumble">Rumble</string>
    <string name="imgur">Imgur</string>
    <string name="iziesene">IzIesene</string>
    <string name="onetvru">Onetvru</string>
    <string name="vlipsy">Vlipsy</string>
    <string name="dp_frame">DP Frame</string>
    <string name="select_photos">Select Photos</string>
    <string name="how_to_download">How to Download</string>
    <string name="languages">Language</string>
    <string name="select_language">Select Language</string>
    <string name="done">Done</string>
    <string name="press">Press back again for exit</string>
    <string name="how_to_downloads">How to download</string>
    <string name="next">Next</string>
    <string name="got_it">Got it</string>
    <string name="setting">Setting</string>
    <string name="click_here">Click Here</string>
    <string name="rate_or_app">Rate our app</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="save">Saved</string>
    <string name="video_downloaders">Video Downloader</string>
    <string name="copy_hashtag">Copy hashtag</string>
    <string name="hashtag_copied">Hashtag copied</string>
    <string name="select_hashtag">Select Hashtag</string>
    <string name="paste_video_link_here">Paste video link here...</string>
    <string name="paste_link">Paste Link</string>
    <string name="don_t_want_to_download_media_nfrom_private_account">Don’t want to download media from private account ?</string>
    <string name="delete_video">Delete Video</string>
    <string name="are_you_sure_you_want_to_delete_n_this_video">Are you sure you want to delete this video ?</string>
    <string name="instagram_story">Instagram Story</string>
    <string name="there_need_to_enable_the_storage_in_order_nto_use_this_whatsapp">There need to enable the storage in order \nto use this Whatsapp.</string>
    <string name="all_in_one_video_downloader">All in one video downloader</string>
    <string name="video_downloader_auto_detects_videos_you_ncan_download_them_with_just_one_click">Download video with just one click.</string>
    <string name="app_not_available">App Not Available</string>
    <string name="open_instagram">Open Instagram</string>
    <string name="we_redirect_you_on_application">We redirect you on application !</string>
    <string name="open_facebook">Open Facebook</string>
    <string name="downloads">Downloads</string>
    <string name="please_turn_on_internet_connection">Please Turn On Internet Connection</string>
    <string name="share">Share</string>
    <string name="selected_image">Select Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this image ?</string>
    <string name="retry_network">Retry network</string>
    <string name="this_action_might_contain_ads">This action might contain ads</string>
    <string name="loading_ads">Loading ads...</string>
    <string name="how_to_use">How to Use?</string>
    <string name="search_video">Search Video</string>
    <string name="browse_videos_from_your_social_media_n_accounts">Browse videos from your social media \n accounts</string>
    <string name="skip_intro">Skip Intro</string>
    <string name="copy_link">Copy Link</string>
    <string name="copy_your_social_media_video_link_supported_n_by_our_app">Copy your social media video link supported \n by our app</string>
    <string name="paste_link_and_download">Paste link and download</string>
    <string name="download_video">Download Video</string>
    <string name="paste_url_and_download_video">Paste URL and download video</string>
    <string name="got_its">Got it!</string>

</resources>