<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rename_bg"
    android:padding="@dimen/_10sdp">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/open_instagram"
        android:layout_marginStart="@dimen/_5sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/we_redirect_you_on_application"
        android:textColor="#868686"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_1sdp"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@id/text"/>


    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/text_1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#868686"
        app:layout_constraintEnd_toStartOf="@id/yes"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_13sdp"/>

    <TextView
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/okay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_1"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/language_bg"
        android:layout_marginBottom="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/_15sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>