<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rename_bg"
    android:padding="@dimen/_5sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/delete_video"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"/>

    <TextView
        android:id="@+id/delete_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/delete"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/_13sdp"
        android:text="@string/are_you_sure_you_want_to_delete_n_this_video"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:textColor="#868686"/>


    <TextView
        android:id="@+id/delete_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/delete_txt"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="#868686"
        app:layout_constraintEnd_toStartOf="@id/delete_ok"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_13sdp"/>

    <TextView
        android:id="@+id/delete_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        app:layout_constraintTop_toBottomOf="@id/delete_txt"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        android:textColor="@color/language_bg"
        android:layout_marginBottom="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="@dimen/_15sdp"/>

</androidx.constraintlayout.widget.ConstraintLayout>