<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rename_bg">

    <TextView
        android:id="@+id/rename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/whatsapp_permission"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rename_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/redirect_to_whatsapp_folder_for_getting_status_photos_and_videos_so_you_can_download_in_your_device"
        android:textAlignment="center"
        android:textColor="#63667A"
        android:textSize="@dimen/_10sdp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rename" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rename_et">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/cancel_bg"
            android:ellipsize="marquee"
            android:gravity="center_vertical|center_horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/cancel"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_weight="1"
            android:background="@drawable/how_to_text_bg"
            android:ellipsize="marquee"
            android:gravity="center_vertical|center_horizontal"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/okay"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>