<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_bg"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/downloader_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/video_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="marquee"
            android:fontFamily="@font/poppins_semibold"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/all_video_downloader"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/languages"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_margin="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/language" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/downloader_layout">

        <LinearLayout
            android:id="@+id/downloaded_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/language_click_bg"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/download_pic"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/downloader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/video_downloader"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/click_here_text"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_17sdp"
                android:layout_marginVertical="@dimen/_12sdp"
                android:background="@drawable/clcik_here_bg"
                android:ellipsize="marquee"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:marqueeRepeatLimit="marquee_forever"
                android:singleLine="true"
                android:text="@string/click_here"
                android:textColor="@color/click_here"
                android:textSize="@dimen/_8sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/web_browser_click"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/language_click_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/web_browser_pic"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/web" />

                <TextView
                    android:id="@+id/web_browser_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/web_browser"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/setting_click"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/language_click_bg"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/setting_pic"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/settings" />

                <TextView
                    android:id="@+id/setting_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_7sdp"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/poppins_semibold"
                    android:gravity="center_vertical"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:text="@string/setting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/how_to_click"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/how_to_text_bg"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/item_layout">

        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/question_mark" />

        <TextView
            android:id="@+id/how_to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_7sdp"
            android:ellipsize="marquee"
            android:fontFamily="@font/poppins_medium"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/how_to_download"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>