<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".intro.IntroActivity">

    <LinearLayout
        android:id="@+id/linearCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_7sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/one_search"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/txtCopy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_video"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/_13sdp"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"/>

    </LinearLayout>

    <vidmatemaster.fastvideodownloader.allvideodownloader.hdvideodownloader.model.CustomViewPager
        android:id="@+id/view_pager"
        app:layout_constraintTop_toBottomOf="@id/linearCopy"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="@dimen/_280sdp" />



    <ImageView
        android:id="@+id/imgChange"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintTop_toBottomOf="@id/view_pager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:adjustViewBounds="true"
        android:src="@drawable/one"/>

    <TextView
        android:id="@+id/txtNext"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_9sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/imgChange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/intro_txt_bg"
        android:text="@string/next"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="@dimen/_15sdp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/txtSkipIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/skip_intro"
        android:textColor="@color/intro_color"
        android:textSize="@dimen/_13sdp"
        android:fontFamily="@font/poppins_regular"/>


    <include
        android:id="@+id/native_ad_container"
        layout="@layout/ad_layout_native_medium"
        android:layout_width="match_parent"
        android:layout_height="@dimen/medium_native_ad_height"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/_10sdp" />

</androidx.constraintlayout.widget.ConstraintLayout>